test/oscar/compiler/errors/mutReassignMismatch.oscar
message testNow()


actor Tester() {
  mut int x = 1;
  
  receive = {
    | testNow() => {
        x = 2.0;
    }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testNow>() |> tester;
}